Fixed lyric log error and nowrap lyric

--- a/src/static/FM/Extra.scss
+++ b/src/static/FM/Extra.scss
@@ -24,6 +24,7 @@
     p {
       margin-bottom: 0.5rem;
       color: $petal-grey;
+      white-space: nowrap;
     }
 
     p.line-active {
